--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="particles-js"></div>
 
     <!-- scripts -->
-    <script src="../particles.js"></script>
+    <script src="js/particles.js"></script>
     <script src="js/app.js"></script>
 
 </body>
